fix[docs]: fix documentation of List handler
